forgot password send email UI

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -25,5 +25,6 @@
       </label>
     </div>
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+    <a href="/forgot">Forgot Password ?</a>
   </form>
 </main>
