--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,6 +2,10 @@
   <form [formGroup]="loginForm" (ngSubmit)="login()" >
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
+    <div *ngIf="loginError" class="alert alert-danger alert-dismissible fade show" role="alert">
+      {{loginError}}
+    </div>
+
     <div class="form-floating">
       <input  formControlName="nic" type="text" class="form-control" id="nic" placeholder="NIC">
       <label for="nic">NIC</label>
@@ -19,12 +23,8 @@
       </div>
     </div>
 
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+    <br>
     <a href="/forgot">Forgot Password ?</a>
   </form>
 </main>
