--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,21 +1,9 @@
-html,
-body {
-  height: 100%;
-}
-
-body {
-  display: flex;
-  align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
-}
 
 .form-signin {
-  width: 100%;
+  width: 20rem;
   max-width: 330px;
   padding: 15px;
-  margin: auto;
+  margin: 10rem auto;
 }
 
 .form-signin .checkbox {
@@ -36,4 +24,11 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+input{
+  margin-bottom: 1rem;
+}
+
+button{
+  margin-bottom: 1rem;
 }
