--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 /* You can add global styles to this file, and also import other style files */
 /*TODO check if the global css is OK with this*/
-
+@import "~bootstrap-icons/font/bootstrap-icons.css";
