moved principal school details to new page

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
 
       <ul class="navbar-nav mr-auto" *ngIf="teacherData.teacherType== 'principal' && userLogedIn">
         <li class="nav-item">
-          <a class="nav-link" href="#">School Details</a>
+          <a class="nav-link" href="/schooldetail">School Details</a>
         </li>
         <li *ngIf="userLogedIn" class="nav-item">
           <a class="btn btn-outline-primary my-2 my-sm-0" (click)="logout()" >Logout</a>
