Approve Reject user update details by principal

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,6 +15,9 @@
 
       <ul class="navbar-nav mr-auto" *ngIf="teacherData.teacherType== 'principal' && userLogedIn">
         <li class="nav-item">
+          <a class="nav-link" href="/teacherupdate">Update Teacher</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/schooldetail">School Details</a>
         </li>
         <li *ngIf="userLogedIn" class="nav-item">
