--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,4 @@
 /* You can add global styles to this file, and also import other style files */
 /*TODO check if the global css is OK with this*/
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+@import "~@ng-select/ng-select/themes/default.theme.css";
