--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,88 @@
-<p>admin-dashboard works!</p>
+
+<div class="container-fluid">
+    <h3 class="text-end">Welcome {{userDetails.firstName | titlecase}} !</h3>
+    <h6 class="text-end" *ngFor="let p of provinceArray">{{p.name |uppercase}}</h6>
+    <div class="row">
+      <div class="col-md-8">
+        <div class="card">
+          <h5 class="card-header">All Teacher Requests</h5>
+          <div class="card-body">
+            <div>
+              <input class="form-control" type="text" [(ngModel)]="data" placeholder="Search">
+            </div>
+            <br>
+            <table class="table">
+              <thead>
+                <th>NIC</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Contact Number</th>
+                <th>Teacher Type</th>
+                <th>Province</th>
+                <th></th>
+              </thead>
+              <tbody>
+              <tr *ngFor="let requset of allTeacherRequestDataArray  | filter:data">
+                <td>{{requset.nic |uppercase}}</td>
+                <td>{{requset.name |uppercase}}</td>
+                <td>{{requset.email}}</td>
+                <td>{{requset.contactNumber}}</td>
+                <td>{{requset.teacherType}}</td>
+                <td>{{requset.province | titlecase}}</td>
+                <td><a class="btn btn-warning"  >View <i class="bi bi-arrow-up-right-square"></i></a></td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <h5 class="card-header">All Locked Users</h5>
+          <div class="card-body">
+            <div>
+              <!-- <input class="form-control" type="text" [(ngModel)]="lockedData" placeholder="Search"> -->
+            </div>
+            <br>
+            <table class="table">
+              <thead>
+              <th>NIC</th>
+              <th></th>
+              </thead>
+              <tbody>
+              <!-- <tr *ngFor="let lock of allLockedUsers | filter:lockedData">
+                <td>{{lock.nic |uppercase}}</td>
+                <td><button type="button" class="btn btn-secondary" data-bs-toggle="modal" attr.data-bs-target="#confirm{{lock.nic}}">
+                  <i class="bi bi-unlock-fill"></i>
+                </button></td> -->
+                <!--          user unlock Confirm box start-->
+  
+                <!-- <div class="modal fade"  attr.id="confirm{{lock.nic}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" >Unlock Confirmation</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        User Will Unlock
+                        <h5>Are you sure ?</h5>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button class="btn btn-primary" data-bs-dismiss="modal" (click)="unlockUser(lock.nic)">Unlock <i class="bi bi-unlock-fill"></i></button>
+                      </div>
+                    </div>
+                  </div>
+                </div> -->
+  
+                <!--          user unlock Confirm box end-->
+              <!-- </tr> -->
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
